[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/sprites/01/pod1.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/game_objects/scripts/Checkpoint.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/ui/popups/PowerSelectionPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/ui/themes/BodyTheme.tres" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6.78952 )

[node name="CheckPoint" type="Area2D" groups=[
"checkpoint",
]]
z_index = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.14215 )
shape = SubResource( 1 )

[node name="CheckpointSprite" type="Sprite" parent="."]
position = Vector2( 0, -6.08195 )
texture = ExtResource( 1 )

[node name="PowerSelectionPopup" parent="." instance=ExtResource( 3 )]

[node name="PromptContainer" type="PanelContainer" parent="."]
visible = false
margin_left = -24.0
margin_top = -40.0
margin_right = 24.0
margin_bottom = -17.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="Label" parent="PromptContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 41.0
margin_bottom = 16.0
text = "'F' key"
[connection signal="body_entered" from="." to="." method="_on_CheckPoint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CheckPoint_body_exited"]
[connection signal="popup_hide" from="PowerSelectionPopup" to="." method="_on_PowerSelectionPopup_popup_hide"]
